@@ -10,10 +10,16 @@
 
 - ajouter scan d'un fichier en utilisant libmagic (retrouver la liste des magic_file dans fix-extension.sh) [OK]
 
-- ajouter modules de scans: module 4, module 5.2, module 5.1/clamav
+- ajouter modules de scans: 
+-- module 4 [OK]
+-- module 5.2
+-- module 5.1/clamav [OK]
+
+- ajouter outil de scan en ligne de commande
 
 - ajouter scan récursif d'un directory (en utilisant src/dir.c)
+-- permière version sans multi-thread
 -- création du pool de threads
 -- lancement d'un scan de fichier dans un thread
 
-
+- ajouter structure rapport
