@@ -1,24 +1,5 @@
 check_PROGRAMS=testfind1 testumwsu1 testumwsuscan1
 
-#testmodule1_CFLAGS= -I$(top_srcdir)/include
-#testmodule1_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@
-#testmodule1_SOURCES=testmodule1.c
-
-modulesdir=$(pkglibdir)/modules
-modules_LTLIBRARIES=module1.la module2.la module3.la
-
-module1_la_SOURCES=module1.c
-module1_la_LDFLAGS= -module -avoid-version
-module1_la_CFLAGS=-I$(top_srcdir)/include
-
-module2_la_SOURCES=module2.c
-module2_la_LDFLAGS= -module -avoid-version
-module2_la_CFLAGS=-I$(top_srcdir)/include
-
-module3_la_SOURCES=module3.c
-module3_la_LDFLAGS= -module -avoid-version
-module3_la_CFLAGS=-I$(top_srcdir)/include
-
 testfind1_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src
 testfind1_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@ -lmagic
 testfind1_SOURCES=testfind1.c
@@ -30,3 +11,11 @@ testumwsu1_SOURCES=testumwsu1.c
 testumwsuscan1_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src
 testumwsuscan1_LDADD=$(top_builddir)/src/libumwsu.la @GMODULE2_LIBS@ -lmagic
 testumwsuscan1_SOURCES=testumwsuscan1.c
+
+modulesdir=$(pkglibdir)/modules
+modules_LTLIBRARIES=testmodule.la
+
+testmodule_la_SOURCES=testmodule.c
+testmodule_la_LDFLAGS= -module -avoid-version
+testmodule_la_CFLAGS=-I$(top_srcdir)/include
+
